# openglVideo

./: CMakeLists.txt  README.md  VideoClass.cpp  VideoClass.hpp  WindowView.cpp  WindowView.hpp  main.cpp  openglVideo.kdev4
